--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="header">
     <h1>Matt Bishun</h1>
-    <p class="about-me">I am a developer specializing in HTML and CSS, Javascript and MySQL. I like to go out drinking, go to watch Crawley and to the gym.</p></div>  
+    <p class="about-me">I am a developer specializing in HTML and CSS, Javascript and MySQL. I like to socialise, go to watch Crawley and to the gym.</p></div>  
 
     <div class ="projects">
   <h2>Projects</h2>
@@ -21,12 +21,13 @@
     <li>Image Hover project</li>
     <li>Sleep Debt Calculator</li>
     <li>Number Guesser</li>
+    <li>PHP Budget Calculator</li>  
   </ul>
 
-  <p class="title">Design projects</p>
+  <p class="title">Other projects developed</p>
   <ul>
-    <li>Yum Yum Fudge Inc.</li>
-    <li>University of Marimont Dance Marathon</li>  
+    <li>SportPAD Android Mobile App for Portsmouth University</li>
+    
   </ul>
   </div>
   
