--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 
 <body>
   <div class="header">
+    <img src="me.jpg" alt="Me" class = "me"/>
     <h1>Matt Bishun</h1>
-    <p class="about-me">I am a developer specializing in HTML and CSS, Javascript and MySQL. I like to socialise, go to watch Crawley and to the gym.</p></div>  
+    <p class="about-me">I am a developer specializing in HTML and CSS, Javascript and MySQL. I like to socialise, go to watch Crawley and to the gym.</p>
+  </div>  
 
     <div class ="projects">
   <h2>Projects</h2>
@@ -17,10 +19,10 @@
 
   <p class="title">Web Development projects</p>
   <ul>
-    <li>User Login Page</li>
-    <li>Image Hover project</li>
-    <li>Sleep Debt Calculator</li>
-    <li>Number Guesser</li>
+    <li>User Login Page using PHP, MySQL and HTML/CSS</li>
+    <li>Image Hover project using HTML and CSS</li>
+    <li>Sleep Debt Calculator using JS</li>
+    <li>Number Guesser in JS</li>
     <li>PHP Budget Calculator</li>  
   </ul>
 
