--- a/index.html
+++ b/index.html
@@ -8,34 +8,39 @@
 
 <body>
   <div class="header">
-    <img src="me.jpg" alt="Me" class = "me"/>
-    <h1>Matt Bishun</h1>
-    <p class="about-me">I am a developer specializing in HTML and CSS, Javascript and MySQL. I like to socialise, go to watch Crawley and to the gym.</p>
+<h1>Matt Bishun</h1>
+<p class="title">About me</p>
+<ul>
+
+    <li>I have recently graduated from University of Portsmouth and I am wanting to become a Front end Web developer.</li>
+    <li>I specialise in HTML, CSS and Javascript.</li>
+    <li>I have also coded in SQl, PHP and XML previously. </li>  
+
+</ul> 
+
   </div>  
 
-    <div class ="projects">
+  <div class ="projects">
   <h2>Projects</h2>
-  <img src="badge.png" alt="HTML5 logo" class = "logo"/>
-
-  <p class="title">Web Development projects</p>
+  <p class="title"> Files and Projects I have created to begin with</p>
   <ul>
-    <li>User Login Page using PHP, MySQL and HTML/CSS</li>
-    <li>Image Hover project using HTML and CSS</li>
-    <li>Sleep Debt Calculator using JS</li>
-    <li>Number Guesser in JS</li>
-    <li>PHP Budget Calculator</li>  
-  </ul>
-
-  <p class="title">Other projects developed</p>
-  <ul>
-    <li>SportPAD Android Mobile App for Portsmouth University</li>
     
+    <li>Sleep Debt Calculator file in JS</li>
+    <li>Number Guesser file in JS</li>
+    <li>Budget Calculator file in PHP</li>  
   </ul>
+ 
+
+  <p class="title">Special Mention </p>
+  
+  <p>For my dissertation in my final year of my degree, I created a SportPAD Android Mobile App for Portsmouth University.</p>
+   
   </div>
+ 
   
   <div class ="socials">
   <h2>Contact</h2>
-  <p>Find me on Twitter, LinkedIn, and GitHub.</p>
+  <p>Find me on LinkedIn and GitHub.</p>
 
   <h6>&copy; Copyright 2019. All Rights Reserved.</h6>
   </div>
