--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <li>I have recently graduated from University of Portsmouth and I am wanting to become a Front end Web developer.</li>
     <li>I specialise in HTML, CSS and Javascript.</li>
-    <li>I have also coded in SQl, PHP and XML previously. </li>  
+    <li>I have also coded in SQL, PHP and XML previously. </li>  
 
 </ul> 
 
