--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   
   <div class ="socials">
   <h2>Contact</h2>
-  <p>Find me on LinkedIn and GitHub.</p>
+  <p>Find me on <a href="https://www.linkedin.com/in/matthew-bishun-876291128/">LinkedIn</a> and <a href="https://github.com/mattbishun5">GitHub</a> </p>
 
   <h6>&copy; Copyright 2019. All Rights Reserved.</h6>
   </div>
